--- a/.github/workflows/nuget-release.yml
+++ b/.github/workflows/nuget-release.yml
@@ -7,7 +7,7 @@ on:
         required: true
         type: string
     secrets:
-      artifacts-dowload-token:
+      token:
         required: true
       nuget-api-token:
         required: true
@@ -22,7 +22,7 @@ jobs:
       - name: Download artifacts
         uses: dawidd6/action-download-artifact@v2
         with:
-          github_token: ${{ secrets.artifacts-dowload-token }}
+          github_token: ${{ secrets.token }}
           workflow: ${{ inputs.artificats-workflow }}
           name: "-Nuget$"
           name_is_regexp: true
