--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -11,11 +11,21 @@ on:
         type: string
       artifact-name-prefix:
         required: true
-        type: string   
+        type: string
+    secrets:
+      es-username:
+        required: true
+      es-password:
+        required: true
+      es-credential-id:
+        required: true
+      es-totp-secret:
+        required: true
         
 env:
   PUBLISH_ANY_PATH: ./bin/publish/any
   NUPKG_PATH: ./bin/nupkg/any
+  PACKAGE_VERSION_FILE: ./version.txt
   
 jobs:
   build-test:
@@ -23,6 +33,10 @@ jobs:
       matrix:
         os: [windows-latest, macos-latest, ubuntu-latest]
         configuration: [Debug, Release]
+        include:
+          - os: windows-latest
+            configuration: Debug
+            cache: true
 
     runs-on: ${{ matrix.os }}
 
@@ -31,7 +45,14 @@ jobs:
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
-
+        
+    - name: Cache checkout
+      if: ${{ matrix.cache }}
+      uses: actions/cache/save@v3
+      with:
+        path: ${{ github.workspace }}
+        key: checkout-${{ github.run_id }}-${{ github.run_attempt }}
+          
     - name: Use dotnet sdk
       uses: actions/setup-dotnet@v3
       with:
@@ -47,7 +68,15 @@ jobs:
     needs: build-test
     runs-on: windows-latest
     steps:
+    - name: Cache checkout
+      id: cache-checkout
+      uses: actions/cache/restore@v3
+      with:
+        path: ${{ github.workspace }}
+        key: checkout-${{ github.run_id }}-${{ github.run_attempt }}
+        
     - name: Checkout
+      if: steps.cache-checkout.outputs.cache-hit != 'true'
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
@@ -75,23 +104,112 @@ jobs:
         $xml = [Xml] (Get-Content ${{ inputs.main-project }})
         $version = $xml.Project.PropertyGroup.Version
         echo "New version - $version"
-        echo "VERSION=$version" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+        echo "VERSION=$version" | Out-File -FilePath ${{ env.PACKAGE_VERSION_FILE }} -Encoding utf8 -Append
         
     - name: Publish
       run: dotnet publish ${{ inputs.main-project }} -o $env:PUBLISH_ANY_PATH
 
     - name: Nuget Pack
-      run: dotnet pack ${{ inputs.main-project }} --no-build -o $env:NUPKG_PATH 
+      run: dotnet pack ${{ inputs.main-project }} --no-build -o $env:NUPKG_PATH  
 
+    - name: Cache packages
+      uses: actions/cache/save@v3
+      with:
+        path: |
+          ${{ env.PUBLISH_ANY_PATH }}
+          ${{ env.NUPKG_PATH }}
+          ${{ env.PACKAGE_VERSION_FILE }}
+        key: packages-${{ github.run_id }}-${{ github.run_attempt }}
+        enableCrossOsArchive: true
+
+    - name: Cache nuget packages only
+      uses: actions/cache/save@v3
+      with:
+        path: |
+          ${{ env.NUPKG_PATH }}
+          ${{ env.PACKAGE_VERSION_FILE }}
+        key: nuget-only-packages-${{ github.run_id }}-${{ github.run_attempt }}
+        enableCrossOsArchive: true
+        
+  sign-nuget:
+    needs: package
+    runs-on: windows-latest
+    if: github.ref == 'refs/heads/main'
+    steps:
+    - name: Restore nuget file
+      id: nuget-cache
+      uses: actions/cache/restore@v3
+      with:
+        path: |
+          ${{ env.NUPKG_PATH }}
+          ${{ env.PACKAGE_VERSION_FILE }}
+        key: nuget-only-packages-${{ github.run_id }}-${{ github.run_attempt }}
+        enableCrossOsArchive: true
+        fail-on-cache-miss: true
+
+    - name: Check nuget-cache hit
+      if: steps.nuget-cache.outputs.cache-hit != 'true'
+      run: exit 1
+
+    - name: Get version
+      shell: bash
+      run: |
+        . version.txt
+        echo $VERSION
+        echo "version=$VERSION" | tr -d '\r\n' >> "$GITHUB_ENV"
+        
+    - name: Download and Unzip CodeSignTool
+      run: |
+        Invoke-WebRequest -OutFile CodeSignTool.zip "https://www.ssl.com/download/codesigntool-for-windows/"
+        Expand-Archive -Force CodeSignTool.zip
+        Remove-Item CodeSignTool.zip
+        Add-Content -Path .\CodeSignTool\conf\code_sign_tool.properties -Value "`nTSA_LEGACY_URL=http://ts.ssl.com/legacy"
+        
+    - name: Sign artifact
+      run: |
+        $path = $env:NUPKG_PATH -replace "/", "\"
+        $relativePath = $path +  '\' + '${{ inputs.artifact-name-prefix }}' + '.' + '${{ env.version }}' + '.nupkg'
+        $npath = Resolve-Path -Path (Join-Path -Path '${{ github.workspace }}' -ChildPath $relativePath)
+        echo "$npath"
+        cd CodeSignTool
+        .\CodeSignTool.bat sign -username=${{ secrets.es-username }} -password=${{ secrets.es-password }} -credential_id=${{ secrets.es-credential-id }} -totp_secret=${{ secrets.es-totp-secret }} -input_file_path="$npath" -override
+        $output = nuget verify -Signatures $npath
+        if ($output1 -like '*failed*') { exit 1 }
+        
+  upload-artifacts:
+    needs: sign-nuget
+    runs-on: ubuntu-latest
+    steps:
+    - name: Restore Packages
+      id: package-cache
+      uses: actions/cache/restore@v3
+      with:
+        path: |
+          ${{ env.PUBLISH_ANY_PATH }}
+          ${{ env.NUPKG_PATH }}
+          ${{ env.PACKAGE_VERSION_FILE }}
+        key: packages-${{ github.run_id }}-${{ github.run_attempt }}
+        fail-on-cache-miss: true
+
+    - name: Check package-cache hit
+      if: steps.package-cache.outputs.cache-hit != 'true'
+      run: exit 1
+      
+    - name: Get version
+      run: |
+        . version.txt
+        echo $VERSION
+        echo "version=$VERSION" | tr -d '\r\n' >> "$GITHUB_ENV"
+        
     - name: Archive Release Files - Zip
-      run: 7z a -tzip '${{ runner.temp }}/${{ inputs.artifact-name-prefix }}.${{ env.VERSION }}.zip' '${{ env.PUBLISH_ANY_PATH }}'
+      run: 7z a -tzip '${{ runner.temp }}/${{ inputs.artifact-name-prefix }}.${{ env.version }}.zip' '${{ env.PUBLISH_ANY_PATH }}'
 
     - name: Archive Release Files - Tar
       shell: pwsh
       run: |
         $lastPart = (Split-Path ${{ env.PUBLISH_ANY_PATH }} -Leaf)
         $parentPath = (Split-Path ${{ env.PUBLISH_ANY_PATH }} -Parent)
-        tar -czvf '${{ runner.temp }}/${{ inputs.artifact-name-prefix }}.${{ env.VERSION }}.tar.gz' -C $parentPath $lastPart
+        tar -czvf '${{ runner.temp }}/${{ inputs.artifact-name-prefix }}.${{ env.version }}.tar.gz' -C $parentPath $lastPart
         
     - name: Upload Artifacts - Release Files - Zip
       uses: actions/upload-artifact@v3
@@ -106,11 +224,10 @@ jobs:
         name: ${{ inputs.artifact-name-prefix }}
         path: "${{ runner.temp }}/*.tar.gz"
         if-no-files-found: error
-        
+
     - name: Upload Artifacts - Nuget
       uses: actions/upload-artifact@v3
       with:
         name: ${{ inputs.artifact-name-prefix }}-Nuget
         path: ${{ env.NUPKG_PATH }}/
         if-no-files-found: error
-        
