--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -12,6 +12,9 @@ on:
       artificats-workflow:
         required: true
         type: string
+      github-release-env:
+        required: true
+        type: string
       github-release-url:
         required: true
         type: string
@@ -26,7 +29,7 @@ jobs:
   github-release:
     runs-on: ubuntu-latest
     environment:
-      name: github-release
+      name: ${{ inputs.github-release-env }}
       url: '${{ inputs.github-release-url }}'
     steps:
       - name: Download artifacts
