--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -13,7 +13,7 @@ on:
         required: true
         type: string
       is-tool:
-        required: false
+        required: true
         type: string
     secrets:
       es-username:
