--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -14,7 +14,7 @@ on:
         type: string
       is-tool:
         required: true
-        type: string
+        type: boolean
     secrets:
       es-username:
         required: true
@@ -110,14 +110,14 @@ jobs:
         echo "VERSION=$version" | Out-File -FilePath ${{ env.PACKAGE_VERSION_FILE }} -Encoding utf8 -Append
         
     - name: Publish
-      if: ${{ inputs.is-tool }} == 'true'
+      if: ${{ inputs.is-tool }}
       run: dotnet publish ${{ inputs.main-project }} -o $env:PUBLISH_ANY_PATH
 
     - name: Nuget Pack
       run: dotnet pack ${{ inputs.main-project }} --no-build -o $env:NUPKG_PATH  
 
     - name: Cache publish files
-      if: ${{ inputs.is-tool }} == 'true'
+      if: ${{ inputs.is-tool }}
       uses: actions/cache/save@v3
       with:
         path: |
@@ -203,7 +203,7 @@ jobs:
     if: ${{ always() }}
     steps:
     - name: Restore publish files
-      if: ${{ inputs.is-tool }} == 'true'
+      if: ${{ inputs.is-tool }}
       id: publish-cache
       uses: actions/cache/restore@v3
       with:
@@ -244,11 +244,11 @@ jobs:
         echo "version=$VERSION" | tr -d '\r\n' >> "$GITHUB_ENV"
         
     - name: Archive Release Files - Zip
-      if: ${{ inputs.is-tool }} == 'true'
+      if: ${{ inputs.is-tool }}
       run: 7z a -tzip '${{ runner.temp }}/${{ inputs.artifact-name-prefix }}.${{ env.version }}.zip' '${{ env.PUBLISH_ANY_PATH }}'
 
     - name: Archive Release Files - Tar
-      if: ${{ inputs.is-tool }} == 'true'
+      if: ${{ inputs.is-tool }}
       shell: pwsh
       run: |
         $lastPart = (Split-Path ${{ env.PUBLISH_ANY_PATH }} -Leaf)
