--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -230,6 +230,7 @@ jobs:
       if: ${{ !inputs.is-tool }}
       run: |
         $path = $env:NUPKG_PATH -replace "/", "\"
+        $fullPath = Resolve-Path -Path (Join-Path -Path '${{ github.workspace }}' -ChildPath $path)
         $relativePath = $path +  '\' + '${{ inputs.artifact-name-prefix }}' + '.' + '${{ env.version }}' + '.nupkg'
         $npath = Resolve-Path -Path (Join-Path -Path '${{ github.workspace }}' -ChildPath $relativePath)
         echo "$npath"
@@ -240,7 +241,7 @@ jobs:
         echo "$tempSPath"
 
         cd CodeSignTool
-        .\CodeSignTool.bat batch_sign -username=${{ secrets.es-username }} -password=${{ secrets.es-password }} -credential_id=${{ secrets.es-credential-id }} -totp_secret=${{ secrets.es-totp-secret }} -input_dir_path="$path"
+        .\CodeSignTool.bat batch_sign -username=${{ secrets.es-username }} -password=${{ secrets.es-password }} -credential_id=${{ secrets.es-credential-id }} -totp_secret=${{ secrets.es-totp-secret }} -input_dir_path="$fullPath"
         
         $outputN = nuget verify -Signatures $npath
         if ($outputN -like '*failed*') { exit 1 }
