--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -54,6 +54,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
+        submodules: recursive
         
     - name: Cache checkout
       if: ${{ matrix.cache }}
@@ -89,6 +90,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
+        submodules: recursive
 
     - name: Use dotnet sdk
       uses: actions/setup-dotnet@v4
