--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -104,9 +104,14 @@ jobs:
         $xml = [Xml] (Get-Content ${{ inputs.main-project }})
         $version = $xml.Project.PropertyGroup.Version
         echo "Current full version - $version"
-
-        $first_part_version = $version.Substring(0, $version.IndexOf('-'))
+        $first_part_version = $version
         
+        $split_index = $version.IndexOf('-')
+        if ($split_index -gt -1)
+        {
+          $first_part_version = $version.Substring(0, $split_index)
+        }
+                
         $new_version = $first_part_version + "-build.${{ github.run_number }}"        
         $content = Get-Content ${{ inputs.main-project }}
         $content | % { $_.Replace("<Version>$version</Version>", "<Version>$new_version</Version>") } | Set-Content ${{ inputs.main-project }}
