--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -40,7 +40,7 @@ jobs:
   build-test:
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [windows-latest, macos-latest, ubuntu-latest]
         configuration: [Debug, Release]
         include:
           - os: windows-latest
